--- a/static/css/style.css
+++ b/static/css/style.css
@@ -310,14 +310,8 @@ a.button-collapse i:hover {
     right: 5px;
 }
 
-/* .delClass a {
-    font-size: 0.5em;
-} */
 
 @media screen and (min-width: 600px) {
-    /* .delClass a {
-        font-size: 0.7em;
-    } */
     .classes>ul>li {
         border-bottom: 1px solid #e8d4d4;
         border-radius: 30px/3px;
@@ -339,7 +333,6 @@ a.button-collapse i:hover {
     color: red;
     text-align: center;
     font-size: 2em;
-    /* padding: 30px 10px; */
     margin: 30px 10px;
     margin-top: 50px;
     display: inline-block;
@@ -351,15 +344,71 @@ h2.warning {
     text-shadow: 0px 0px 10px #bcff04;
     text-align: center;
 }
+
 p.redwarning {
     color:red;
     font-size: 1.2em;
     background-color: rgb(0, 255, 242);
     text-align: center;
 }
+
 p.wayout {
     color:rgb(1, 73, 1);
     font-size: 1.2em;
     background-color: rgb(205, 165, 226);
     text-align: center;
+}
+
+.modal-content {
+    position: relative;
+    margin: 40px auto;
+    border-radius: 2px;
+    border: 0;
+    box-shadow: 0 2px 7px -2px rgba(0,0,0,0.5);
+}
+
+.modal-content::before,
+.modal-content::after {
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    width: 40%;
+    height: 20%;
+    z-index: -1;
+}
+
+.modal-content::before {
+    transition: all 0.15s ease-in-out;
+    left: 20px;
+    -webkit-transform: skew(-5deg) rotate(-5deg);
+        -ms-transform: skew(-5deg) rotate(-5deg);
+            transform: skew(-5deg) rotate(-5deg);
+    box-shadow: 0 7px 15px 0 rgba(0,0,0,0.6),
+                5px 15px 30px 0 rgba(0,0,0,0.4);
+}
+
+.modal-content::after {
+    transition: all 0.25s ease-in-out;
+    right: 15px;
+    -webkit-transform: skew(5deg) rotate(5deg);
+        -ms-transform: skew(5deg) rotate(5deg);
+            transform: skew(5deg) rotate(5deg);
+    box-shadow: 0 10px 15px 0 rgba(0,0,0,0.6),
+                -5px 20px 30px 0 rgba(0,0,0,0.4);
+}
+
+.modal-content:hover::before{
+    left: 2px;
+    -webkit-transform: skew(-2deg) rotate(-2deg) translateY(5px);
+        -ms-transform: skew(-2deg) rotate(-2deg) translateY(5px);
+            transform: skew(-2deg) rotate(-2deg) translateY(5px);
+    box-shadow: 0px 4px 4px 0 rgba(0,0,0,0.5);
+}
+
+.modal-content:hover::after{
+    right: 2px;
+    -webkit-transform: skew(2deg) rotate(2deg) translateY(5px);
+        -ms-transform: skew(2deg) rotate(2deg) translateY(5px);
+            transform: skew(2deg) rotate(2deg) translateY(5px);
+    box-shadow: 0px 5px 5px 0 rgba(0,0,0,0.5);
 }
