--- a/templates/base.html
+++ b/templates/base.html
@@ -30,38 +30,38 @@
             padding: 5px 15px;
         } */
 
-        body, html {
+        /* body, html {
             height: 100%;
             margin: 0;
             padding: 0;
-        }
+        } */
 
-        div {
+        /* div {
             -webkit-box-sizing: border-box;
                -moz-box-sizing: border-box;
                     box-sizing: border-box;
-        }
+        } */
 
-        h2 {
+        /* h2 {
             font-family: helvetica, arial, sans-serif;
             font-weight: 100;
             color: rgb(110, 129, 160);
             font-size: 26px;
-        }
+        } */
 
-        div#scatterChart svg g g.axis g.tick text {
+        /* div#scatterChart svg g g.axis g.tick text {
             font-size: 16px;
-        }
+        } */
 
-        div#scatterChart svg g g.x {
+        /* div#scatterChart svg g g.x {
             fill: red;
             stroke: red;
-        }
+        } */
 
-        div#chascatterChartrt2 svg g g.y {
+        /* div#chascatterChartrt2 svg g g.y {
             fill: rgb(83, 0, 124);
             stroke: rgb(83, 0, 124);
-        }
+        } */
     
     </style>
     <!-- <style>
@@ -81,11 +81,11 @@
         }
     </style> -->
     <style>
-        .modal#displayModal {
+        /* .modal#displayModal {
             width: 100vw;
             height: 100vh;
             background-color: rgba(195, 197, 195, 0.349);
-        }
+        } */
     
     </style>
 </head>
