--- a/templates/base.html
+++ b/templates/base.html
@@ -14,78 +14,14 @@
             rel="stylesheet" 
             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
             crossorigin="anonymous" />
-    <!-- <link rel="stylesheet" href="./static/css/style.css" /> -->
     <link rel="stylesheet" href="./static/vendor/dc.css" />
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
-    <style> <!-- Temporary style for dashboard -->
+    <!-- Temporary style for dashboard, also effecting other pages. -->
+    <style> 
         a { 
             text-decoration: none;
-            color: rgb(17, 27, 33)
+            color: rgb(17, 27, 33); /* #111b21; */
         }
-
-        /* h2 {
-            margin-top: 70px;
-            display: block;
-            background-color: rgb(214, 242, 239);
-            padding: 5px 15px;
-        } */
-
-        /* body, html {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        } */
-
-        /* div {
-            -webkit-box-sizing: border-box;
-               -moz-box-sizing: border-box;
-                    box-sizing: border-box;
-        } */
-
-        /* h2 {
-            font-family: helvetica, arial, sans-serif;
-            font-weight: 100;
-            color: rgb(110, 129, 160);
-            font-size: 26px;
-        } */
-
-        /* div#scatterChart svg g g.axis g.tick text {
-            font-size: 16px;
-        } */
-
-        /* div#scatterChart svg g g.x {
-            fill: red;
-            stroke: red;
-        } */
-
-        /* div#chascatterChartrt2 svg g g.y {
-            fill: rgb(83, 0, 124);
-            stroke: rgb(83, 0, 124);
-        } */
-    
-    </style>
-    <!-- <style>
-        path {
-            stroke-width: 2;
-            fill: none;
-        }
-        .axis path, .axis line {
-            fill: none;
-            stroke: grey;
-            stroke-width: 1;
-            shape-rendering: crispEdges;
-        }
-        .area {
-            fill: #F0F8FF;
-            stroke-width: 0;
-        }
-    </style> -->
-    <style>
-        /* .modal#displayModal {
-            width: 100vw;
-            height: 100vh;
-            background-color: rgba(195, 197, 195, 0.349);
-        } */
     
     </style>
 </head>
