--- a/templates/message_sent.html
+++ b/templates/message_sent.html
@@ -4,13 +4,21 @@
     <div class="row"> 
         <div class="col-md-12">
             <div class="section-title text-center">
-                <h2>Contact Us</h2>
-                <p>Do you have ideas or suggestions to improve this app? <br>
-                Would you like to use this app on your website? <br>
-                Would you like me to develop another app for your website?<br>
-                If you answered yes for any of the above or for any other reason,<br>
-                I would like to hear from you. </p>
+                <h2>Message Sent</h2>
             </div>
         </div>
+    </div>
+    <div class="row">
+        <p><strong>{{ name }}</strong>, your message was sent successfully. </p>
+            
+        <p>The email address you used was <strong>{{ email }}</strong></p> 
+        <p><strong>subject: </strong>{{ subject }}</p>
+        <p><strong>message: </strong><br>{{ message }}</p>
+            
+            
+    </div>
+    <div class="row"> 
+        <p></p>
+        <p><strong>Please select where you would like to go from the menu.</strong></p>
     </div>
 {% endblock %}
