show entered email address in message error page

--- a/templates/message_error.html
+++ b/templates/message_error.html
@@ -11,6 +11,7 @@
 
     <div class="row">
         <h3>Oops!! &emsp;- &emsp; Something went wrong</h3>
+        <p>Email address used: <strong>{{ email }}</strong></p>
         <p>This sometimes happen if
             the email address you entered is not in a valid format or is blacklisted.</p>
         <p><strong>Please <button class="btn btn-success"><a href="javascript:history.back()">Go Back</a></button>. Check the form and try again.</strong></p>
