--- a/templates/index.html
+++ b/templates/index.html
@@ -4,96 +4,63 @@
     <div class="row"> <!-- Heading for Accordion -->
         <div class="col-md-12">
             <div class="section-title text-center">
-                <h2>Food Items</h2>
+                <h2>Nutrition Value App</h2>
                 <span></span>
-                <p>Click to check the details of each food item.</p>
+                <p>value per 100g (100ml) for various food items.</p>
+                <hr>
+                
+                
             </div>
         </div>
     </div>
-
-    <div class="row">  <!-- Holds Accordion Panels -->
-        <div class="col-sm-12">
-            <div class="panel-group" id="accordion">
-            <!-- JINJA TEMPLATING START -->
-            <!-- JINJA FOR loop to build accordion -->
-            {% for foodItem in food %}
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title accordion-toggle" data-target="#panel{{ loop.index }}" data-toggle="collapse" data-parent="#accordion">{{ foodItem.name }}
-                                - {{ foodItem.brand }} - {{ foodItem.classification }}
-                            <i class="indicator glyphicon glyphicon-chevron-down  pull-right"></i>
-                        </h4>
-                    </div>
-                    <div id="panel{{ loop.index }}" class="panel-collapse collapse">
-                        <div class="panel-body panel-size">
-                            <div class="flip3D">
-                                <div class="card back slow" id="box{{ loop.index }}_back">
-                                    <h4>More information</h4>
-                                    <p>{{ foodItem.notes }}</p>
-                                    <p>This item was bought from {{ foodItem.shop }}.</p>
-                                    <div class="card-button">
-                                        <div class="btnGroup1">
-                                            <a href="{{ url_for('edit_food_item', food_item_id=foodItem._id) }}" >
-                                            <button class="btnEdit onclick=""><strong>Edit</strong></button></a>
-                                            <!-- <a href="{#{ url_for('delete_food_item', food_item_id=foodItem._id) }#}" > -->
-                                            <a href="{{ url_for('confirm_delete_food_item', food_item_id=foodItem._id) }}" >
-                                            <button class="btnDelete" onclick=""><strong>Delete</strong></button></a>
-                                        </div>
-                                        <div class="btnGroup2">
-                                            <button class="btnFlip" onclick="flipBox('box{{ loop.index }}_front', 'box{{ loop.index }}_back')"><strong>Back to Front</strong></button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card front slow" id="box{{ loop.index }}_front">
-                                    <div class="cardContent">
-                                        <div class="cardItem">
-                                            <h4>Energy:</h4>
-                                            <p>{{ foodItem.energy1 }}{% if foodItem.energy1 != "NA" and foodItem.energy1 != "" %}kJ{% endif %} 
-                                                    {% if foodItem.energy1 == "" or foodItem.energy2 == "" %}{% else %} / {% endif %}  
-                                                {{ foodItem.energy2 }}{% if foodItem.energy2 != "NA" and foodItem.energy2 != "" %}kcal{% endif %}</p>
-                                        </div>
-                                        <div class="cardItem">
-                                            <h4>Fats:</h4>
-                                            <p>{{ foodItem.fat }}{% if foodItem.fat != "NA" and foodItem.fat != "" %}g{% endif %}</p>
-                                        </div>
-                                        <div class="cardItem">
-                                            <h4>Saturate:</h4>
-                                            <p>{{ foodItem.saturated }}{% if foodItem.saturated != "NA" and foodItem.saturated != "" %}g{% endif %}</p>
-                                        </div>
-                                        <div class="cardItem">
-                                            <h4>Carbohydrates:</h4>
-                                            <p>{{ foodItem.carbohydrates }}{% if foodItem.carbohydrates != "NA" and foodItem.carbohydrates != "" %}g{% endif %}</p>
-                                        </div>
-                                        <div class="cardItem">
-                                            <h4>Sugar:</h4>
-                                            <p>{{ foodItem.sugar }}{% if foodItem.sugar != "NA" and foodItem.sugar != "" %}g{% endif %}</p>
-                                        </div>
-                                        <div class="cardItem">
-                                            <h4>Fibre:</h4>
-                                            <p>{{ foodItem.fibre }}{% if foodItem.fibre != "NA" and foodItem.fibre != "" %}g{% endif %}</p>
-                                        </div>
-                                        <div class="cardItem">
-                                            <h4>Protein:</h4>
-                                            <p>{{ foodItem.protein }}{% if foodItem.protein != "NA" and foodItem.protein != "" %}g{% endif %}</p>
-                                        </div>
-                                        <div class="cardItem">
-                                            <h4>Salt:</h4>
-                                            <p>{{ foodItem.salt }}{% if foodItem.salt != "NA" and foodItem.salt != "" %}g{% endif %}</p>
-                                        </div>
-                                    </div>
-                                    <div class="card-button">
-                                        <div class="btnGroup2">
-                                            <button class="btnFlip" onclick="flipBox('box{{ loop.index }}_front', 'box{{ loop.index }}_back')"><strong>More info and Controls at the Back</strong></button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    <div class="row">
+        <div class="col col-sm-12 info">
+            <h3>Dashboard</h3>
+            <div class="row">
+                <div class="col col-sm-6 info">
+                    <p>Explore the nutritional value of various food items. Filter by using the interactive graphs.</p>
+                    <img src="/static/images/graphs2.png" class="img-responsive" alt="graph image">
                 </div>
-            {% endfor %}
-            </div><!-- End accordion panel-group -->
-        </div><!-- End column -->
-    </div><!-- End row -->
+                <div class="col col-sm-6 info">
+                    <p>see more details by selecting a food item from the filered table.</p>
+                    <img src="/static/images/modal.png" class="img-responsive" alt="modal image">
+                </div>
+            </div>
+        </div>
+
+        <div class="col col-sm-6 info">
+            <h3>Rotating cards</h3>
+            <p>The panels in the accordion view contain cards taht can rotate to reveal more information as well as buttons for action on that food item.</p>
+            <img src="/static/images/accordion-optimize.gif" class="img-responsive" alt="rotating card image">
+        </div>
+
+        <div class="col col-sm-6 info">
+            <h3>Add / Edit food items</h3>
+            <p>Food items are stored in a database. Users can add and edit these food items.</p>
+            <img src="/static/images/addfooditem.png" class="img-responsive" alt="add food item image">
+        </div>
+
+        <div class="col col-sm-6 info">
+            <h3>Menus</h3>
+            <p>Use the menus at the top to navigate around</p>
+
+            <img src="/static/images/menu.png" class="img-responsive" alt="add food item image">
+        </div>
+
+        <div class="col col-sm-6 info">
+            <h3>Contact</h3>
+            <p>Get in touch using the provided contact form</p>
+            
+            <img src="/static/images/contact.png" class="img-responsive" alt="contact form image">
+
+        <div class="col col-sm-6"></div>
+            
+            
+            
+            
+            
+    </div>
+
+    
 
 {% endblock %}
