--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,6 @@
                 <span></span>
                 <p>value per 100g (100ml) for various food items.</p>
                 <hr>
-                
-                
             </div>
         </div>
     </div>
@@ -52,6 +50,7 @@
             <p>Get in touch using the provided contact form</p>
             
             <img src="/static/images/contact.png" class="img-responsive" alt="contact form image">
+        </div>
 
         <div class="col col-sm-6"></div>
             
